tests/NormalTests/paczka1/fuzzy1/20558174.err
Error in line 1: qan7x S639 95,4
Error in line 8: DMSLK S450 82,6
Error in line 2: S507 S639 29,4
Error in line 29: 5aa6n S507 21,8
Error in line 27: S507 S507 69,7
Error in line 33: 0J89VyrrL S639 94,1
Error in line 34: DMSLK A265 366,8
